Form overflow fix

--- a/style.css
+++ b/style.css
@@ -364,6 +364,7 @@ p {
     flex-direction: column;
     align-items: center;
     margin-top: 100px;
+    overflow: hidden;
 }
 
 input {
